--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
   <body>
     <div class="wrapper"> 
       <form action="/login" method="post" class="center-container">
-        <h1>Register</h1>
+        <h1>Login</h1>
         <div class="input-box">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
@@ -21,11 +21,16 @@
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
 
-        <div class="input-box">
-            <input class="form-control mx-auto w-auto" id="confirmation" name="password" placeholder="confirm password" type="password">
+        <div class="remember-forgot">
+          <label><input type="checkbox"> Remember me</label>
+          <a href="#">Forgot password?</a>
         </div>
 
-        <button class="btn" type="submit">Register</button>
+        <button class="btn" type="submit">Login</button>
+
+        <div class="register-link">
+          <p>Dont have an account?<a href="#">Register</a></p>
+        </div>
 
       </form>
     </div>
